--- a/style.css
+++ b/style.css
@@ -53,9 +53,9 @@ body {
 .box-calc .calc .calc-bottom button {
   background-color: rgba(255, 255, 255, 0.8);
   border: 1px solid rgba(0, 0, 0, 0.8);
-  border-radius: 40px;
+  border-radius: 50%;
   padding: 20px;
-  margin: 5px;
+  margin: 1px;
   font-size: 30px;
   text-align: center;
   cursor: pointer;
@@ -78,6 +78,7 @@ body {
   grid-column: 1/3;
   background-color: #333333;
   color: white;
+  border-radius: 40px;
 }
 .box-calc .calc .calc-bottom button:hover {
   background-color: #898080;
